data/derived/fa15/progs/unify/prog1864.ml.out
Characters 24-25:
  let _=List.append [[]] [1];;
                          ^
Error: This expression has type int but an expression was expected of type
         'a list
